# clasificadorFallas

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.txt  cmake_install.cmake  config_pipeline.json-default  fallas.db  mainPipeLine  mainPipeLine.cpp
.gitignore/: .gitignore
include/ML/: estrategiaClasificacion.hpp
include/common/: utils.hpp
source/ML/include/: estrategia_clasificacion.hpp  formateador_dataset.hpp
source/ML/src/: estrategia_clasificacion.cpp  formateador_dataset.cpp
source/db_manager/include/: db_manager.hpp
source/db_manager/src/: db_manager.cpp
source/descriptor/include/: descriptor.hpp  pointfeature.hpp  pointfeaturederivadas.hpp
source/descriptor/src/: descriptor.cpp  pointfeature.cpp
source/main_pipe_line/include/: main_pipe_line.hpp
source/main_pipe_line/src/: main_pipe_line.cpp
source/nube/include/: nube.hpp
source/nube/src/: nube.cpp
source/parser/include/: parametrizador.hpp  parseador.hpp
source/parser/src/: parametrizador.cpp  parseador.cpp
source/segmentation/include/: estrategia_segmentacion.hpp  segmentation.hpp
source/segmentation/src/: estrategia_segmentacion.cpp  segmentation.cpp
source/utils/include/: help.h  utils.hpp
src/ML/: CMakeLists (copia).txt  CMakeLists.txt  Makefile  cmake_install.cmake  estrategiaClasificacion.cpp
src/segmentation/: CMakeLists.txt  Makefile  cmake_install.cmake
test/: unittest_segmentation.cpp
tests/unittest/ML/: unittest_estrategia_clasificacion.cpp
tests/unittest/db_manager/: unittest_db_manager.cpp
tests/unittest/descriptor/: unittest_descriptor.cpp  unittest_pointfeature.cpp
tests/unittest/parser/: unittest_parametrizador.cpp  unittest_parseador.cpp
tests/unittest/segmentation/: config_pipeline.json  unittest_segmentation.cpp
tests/unittest/unit_test_estrategia_clasificador/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  unit_test_estrategia_clasificador.cpp
